--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ nav{
     }
 
     .project-card{
-        height: 30vh !important;
+        height: 25vh !important;
     }
 
     .project-btn-container{
@@ -94,8 +94,32 @@ nav{
         margin: 10% auto 0 auto !important;
     }
 
-    .project-card-description{
+    .project-card-description, .project-card-description div a{
         font-size: 14px !important;
+    }
+
+    #welcome-msg{
+        font-size: 8rem !important;
+        margin-top: 3% !important;
+    }
+
+    #image-container img{
+        width: 410px !important;
+        height: 546px !important;
+    }
+
+    #brief-intro h2{
+        font-size: 2rem !important;
+    }
+
+    #brief-intro p{
+        font-size: 1rem !important;
+    }
+
+    .home-page-btn{
+        width: 150px !important;
+        font-size: 14px !important;
+        padding: 5px !important;
     }
 }
 
@@ -114,7 +138,7 @@ nav{
         font-size: 3rem !important;
     }
 
-    .project-card-description{
+    .project-card-description, .project-card-description div a{
         font-size: 12px !important;
     }
 
@@ -125,10 +149,34 @@ nav{
     .project-btn-container{
         margin: 12% auto 0 auto !important;
     }
+
+    #welcome-msg{
+        font-size: 6rem !important;
+        margin-top: 7% !important;
+    }
+
+    #image-container img{
+        width: 246px !important;
+        height: 328px !important;
+    }
+
+    #brief-intro h2{
+        font-size: 1.5rem !important;
+    }
+
+    #brief-intro p{
+        font-size: 0.8rem !important;
+    }
+
+    .home-page-btn{
+        width: 120px !important;
+        font-size: 14px !important;
+        padding: 5px !important;
+    }
 }
 
 /* Tablet */
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 538px) {
     #id-photo-container{
         width: 60px !important;
         height: 60px !important;
@@ -142,7 +190,7 @@ nav{
         width: 80vw !important;
     }
 
-    .project-card-description{
+    .project-card-description, .project-card-description div a{
         font-size: 9px !important;
     }
 
@@ -156,6 +204,30 @@ nav{
 
     .title-container{
         margin: 11% auto 0 auto !important;
+    }
+
+    #welcome-msg{
+        font-size: 6rem !important;
+        margin-top: 12% !important;
+    }
+
+    #image-container img{
+        width: 147px !important;
+        height: 196px !important;
+    }
+
+    #brief-intro h2{
+        font-size: 1rem !important;
+    }
+
+    #brief-intro p{
+        font-size: 0.6rem !important;
+    }
+
+    .home-page-btn{
+        width: 100px !important;
+        font-size: 8px !important;
+        padding: 3px !important;
     }
 }
 
